--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -15,3 +15,12 @@ article{
     padding: 10px 20px;
     border-radius: 5px;
 }
+
+footer{
+    color: white;
+    text-decoration:none;
+}
+
+footer a{
+    color: inherit;
+}
